--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Handyman TJ offers reliable handyman services in NYC, including carpentry, painting, and furniture assembly.">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="HandymanTJ.png" type="image/x-icon">
   <title>Handyman TJ - New York</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
@@ -1470,4 +1470,5 @@
   </script>
 </body>
 </html>
+
 
