--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@
     <div class="about-content">
       <div class="about-text">
         <h2>We've Got You Covered</h2>
-        <p>TJ Handyman Services is committed to providing reliable, high-quality solutions that improve the comfort, functionality, and aesthetic appeal of your home. From small repairs and large renovation projects to regular maintenance, we prioritize trust, craftsmanship, and customer satisfaction. Our experienced team ensures every job is done right, on time, and with the utmost attention to detail, so you can rest easy knowing your home is in capable hands.</p>
+        <p>At Handyman TJ, we deliver reliable, high-quality solutions that make your home more functional, comfortable, and visually appealing. Our core services include painting, drywall work, flooring, TV and furniture installation, door repair, and general home improvements — all performed with precision, efficiency, and care.We take pride in our professionalism, attention to detail, and commitment to customer satisfaction. Whether it’s a simple repair or a detailed installation, Handyman TJ ensures every job is done right, on time, and to the highest standard.</p>
       </div>
       <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
     </div>
@@ -1470,6 +1470,7 @@
   </script>
 </body>
 </html>
+
 
 
 
