--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     .cta-button {
       display: inline-block;
       padding: 15px 40px;
-      background: linear-gradient(135deg, var(--primary-yellow), #ffcc00);
+      background: linear-gradient(135deg, var(--primary-blue), #1997d1);
       color: var(--black);
       border-radius: 50px;
       font-weight: bold;
@@ -1470,6 +1470,7 @@
   </script>
 </body>
 </html>
+
 
 
 
