--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       font-weight: bold;
       text-decoration: none;
       transition: all 0.3s ease;
-      box-shadow: 0 8px 25px rgba(234, 183, 2, 0.4);
+      box-shadow: 0 8px 25px rgba(249, 249, 249);
       animation: fadeInUp 1.2s ease;
       position: relative;
       overflow: hidden;
@@ -1470,6 +1470,7 @@
   </script>
 </body>
 </html>
+
 
 
 
