--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
       </ul>
     </nav>
     <div class="header-right">
-      <span class="location">NEW YORK</span>
+      <span class="location">NEW YORK CITY</span>
       <div class="contact-social">
         <div class="link-group">
           <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank">Yelp</a>
@@ -1129,7 +1129,7 @@
 
   <section class="hero" id="hero">
     <video autoplay loop muted playsinline>
-      <source src="Kama_HEAD_2.mp4" type="video/mp4">
+      <source src="Main_Video_Handyman.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="hero-overlay">
@@ -1473,6 +1473,7 @@
   </script>
 </body>
 </html>
+
 
 
 
