--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
       cursor: pointer;
       color: var(--text-dark);
       transition: transform 0.3s ease;
+      background-color:red;
     }
 
     .hamburger:hover {
@@ -1473,6 +1474,7 @@
   </script>
 </body>
 </html>
+
 
 
 
