--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 15px 5%;
-      background: rgba(255, 255, 255, 0.95);
+      background: linear-gradient(135deg, var(--primary-teal), #047a76);
       backdrop-filter: blur(10px);
       box-shadow: 0 2px 20px rgba(0, 0, 0, 0.08);
       z-index: 1000;
@@ -1474,6 +1474,7 @@
   </script>
 </body>
 </html>
+
 
 
 
