--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 
     .location {
       font-weight: bold;
-      color: var(--primary-teal);
+      color: rgb(4, 76, 73);
       padding: 8px 15px;
-      background: rgba(5, 131, 127, 0.1);
+      background: rgb(255, 209, 102);
       border-radius: 20px;
       animation: pulse 2s infinite;
     }
@@ -1474,6 +1474,7 @@
   </script>
 </body>
 </html>
+
 
 
 
